# MCP-Server

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  server.py
.github/workflows/: test.yml
excalidraw/: mcp-docs.excalidraw
tests/: test_main.py
