[project]
name = "mcp"
version = "0.1.0"
description = "Create our own MCP Server to interact with Mongodb Database"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pre-commit>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.ruff.lint]  
select = ["E"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

[tool.ruff.lint.per-file-ignores]
"*.py" = ["W191"]
