[project]
name = "mcp"
version = "0.1.0"
description = "Create our own MCP Server to interact with Mongodb Database"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pre-commit>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.ruff]
extend-exclude = [
  "__pycache__",
  "build",
  "dist",
]
target-version = "py313"
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
  "E",
  "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"